[metadata]
name = tremendous
author = Ryan S. Brown
author-email = sb@ryansb.com
summary = Python bindings to libfab (C), a reimplementation of fabulous
description-file = README.md
license = MIT
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
keywords =
    fabulous
    tremendous
    coloring
    console
[files]
packages =
    tremendous
