[metadata]
name = tremendous
author = Ryan S. Brown
author-email = sb@ryansb.com
summary = Python bindings to libfab (C), a reimplementation of fabulous
description-file = README.md
license = MIT
zip_safe = false
#ext_modules =
#    tremendous.ffi
#    https://cffi.readthedocs.org/en/release-0.8/#distributing-modules-using-cffi
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
keywords =
    fabulous
    tremendous
    coloring
    console
[files]
packages =
    tremendous
